charts/prowlarr/~develop/validation/compiled/full/prowlarr/templates/service.yaml
---
# Source: prowlarr/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  annotations:
    annotations: enabled
  labels:
    app.kubernetes.io/name: prowlarr
    helm.sh/chart: prowlarr-1.0.0
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/managed-by: Helm
    commonLabels01: enabled
    commonLabels02: enabled
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 8888
      targetPort: web
      nodePort: null
  selector:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/instance: prowlarr
    podLabels: enabled
