charts/prowlarr/~develop/validation/compiled/full/prowlarr/templates/ingress.yaml
---
# Source: prowlarr/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  annotations:
    annotations: enabled
  labels:
    app.kubernetes.io/name: prowlarr
    helm.sh/chart: prowlarr-1.0.0
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/managed-by: Helm
    commonLabels01: enabled
    commonLabels02: enabled
spec:
  ingressClassName: "nginx"
  rules:
    - host: prowlarr.example.com
      http:
        paths:
          - path: /ui
            pathType: ImplementationSpecific
            backend:
              service:
                name: prowlarr
                port:
                  number: 8888
